--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body
 #welcome {
     color: #FFFFFF;
     bottom: 0;
-    background: gray;
+    background: black;
     display: table;
     width: 100%;
     height: 100%;
@@ -50,5 +50,13 @@ h1 {
     font-weight: bold;
     text-align: center;
     background: gray;
+    color: #FFFFFF;
+}
+
+#model {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    background: black;
     color: #FFFFFF;
 }
