--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body
     width: 100%;
     height: 100%;
     z-index: 9;
+    font-family: 'Dancing Script', cursive;
 }
 #bio {
     font-size: 20px;
